# PyCodeScan

./: README.md  pyproject.toml
examples/: insecure_all.py  insecure_shell.py  insecure_web_app.py
pycodescan/: __init__.py  __main__.py  analyzer.py  reporter.py
pycodescan/detectors/: __init__.py  base.py  dangerous_functions.py  hardcoded_secrets.py
