[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pycodescan"
version = "0.1.0"
description = "AST-based Python security vulnerability scanner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pycodescan = "pycodescan.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycodescan*"]
